--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
 		"preview": "vite preview",
 		"lint": "eslint . --fix --max-warnings=0",
 		"format": "prettier . --write",
-		"prepare": "husky install",
 		"predeploy": "yarn run build",
 		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"classnames": "^2.3.2",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.8.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.27",
