--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"homepage": "https://vfa-bientv.github.io/portfolio",
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc && vite build && cp ./_redirects ./dist/_redirects",
+		"build": "tsc && vite build && cp ./_redirects ./dist/_redirects && cp ./404.html ./dist/404.html",
 		"preview": "vite preview",
 		"lint": "eslint . --fix --max-warnings=0",
 		"format": "prettier . --write",
